--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
       | (_/ \\_) |( (_| || |_ | |_ ( (_) )   \\__, \\
       \`\\___x___/'\`\\__,_)\`\\__)\`\\__)\`\\___/'   (____/
 
-      Stop hacking my shop, you creepy Jedi! You want me to call the Hutts?
+      Stop hacking my shop, you creepy Jedi!
+      Get out or I'll call the Hutts on you!
     `);
   </script>
 </html>
